# ATCS_HW_5

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.sh  sitecustomize.py  test_pipeline.py
data/: preprocess_ct.joblib  titanic_test.csv
results/: metrics.json  titanic_model.h5
results/ablation/first_order_k20/: metrics.json  model.h5
results/analysis/: summary.json
results/checkpoints/: cp-01.h5  cp-02.h5  cp-03.h5  cp-04.h5  cp-05.h5  cp-06.h5  cp-07.h5  cp-08.h5  cp-09.h5  cp-10.h5  cp-11.h5  cp-12.h5  cp-13.h5  cp-14.h5  cp-15.h5  cp-16.h5  cp-17.h5  cp-18.h5  cp-19.h5  cp-20.h5  cp-21.h5  cp-22.h5  cp-23.h5  cp-24.h5  cp-25.h5  cp-26.h5  cp-27.h5  cp-28.h5  cp-29.h5  cp-30.h5  cp-31.h5  cp-32.h5  cp-33.h5  cp-34.h5  cp-35.h5  cp-36.h5  cp-37.h5  cp-38.h5  cp-39.h5  cp-40.h5
results/influence_first_order/: test_0.csv  test_1.csv  test_2.csv
results/influence_tracin/: test_0.csv  test_1.csv  test_2.csv
src/: preprocess.py
titanic_influence/: __init__.py  ablation.py  analysis.py  influence_first_order.py  influence_tracin.py  preprocess.py  train_model.py  utils.py
titanic_influence.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
