[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic_influence"
version = "0.1.0"
description = "Package for the Titanic Influence-Analysis assignment"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["titanic_influence*"]
